[metadata]
name = flake8_complex_f_strings
version = 0.1.0
description='Flake8 plugin for too complex f-strings.'
author = "Anatoly Korobov"
author_email='a.korobov06@gmail.com',
url='git@github.com:anatoly-kor/flake8_complex_f_strings.git'


[options]
py_modules = flake8_complex_f_strings
install_requires = 
    flake8>=3.7
    importlib-metadata>=0.9;python_version<"3.8"

[options.entry_points]
flake8.extension =
    FCS=flake8_complex_f_strings:Plugin
