[metadata]
name = flake8_complex_f_strings
version = 0.1.0
author = Anatoly Korobov
author_email = a.korobov06@gmail.com,
description = Flake8 plugin for too complex f-strings.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/anatoly-kor/flake8_complex_f_strings
project_urls =
    Bug Tracker = https://github.com/anatoly-kor/flake8_complex_f_strings/issues

[options]
py_modules = flake8_complex_f_strings
install_requires = 
    flake8>=3.7
    importlib-metadata>=0.9;python_version<"3.8"

[options.entry_points]
flake8.extension =
    FCS=flake8_complex_f_strings:Plugin
